Update MetricWorkflow.ipynb to decouple static links

--- a/MetricWorkflow.ipynb
+++ b/MetricWorkflow.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "test_image = '/work/users/a/a/aarav7/SNU16/SNU16_JQ_Masks/SNU16_JC_JQ1_IC50_24h_100_Merge.tif'\n",
+    "test_image = #path to test image\n",
     "tiff_image = Image.open(test_image)\n",
     "\n",
     "# Convert to a NumPy array\n",
@@ -70,9 +70,9 @@
    ],
    "source": [
     "# Paths to the directories\n",
-    "true_segmentation_folder = '/work/users/a/a/aarav7/Masked_img_3_and_4_1164imgs/Segmentation_labels'\n",
-    "predicted_segmentation_folder = '/work/users/a/a/aarav7/Split1/filled_predicted_masks'\n",
-    "output_folder = '/work/users/a/a/aarav7/Split1/overlay_masks'\n",
+    "true_segmentation_folder = #path to true segmentation folder\n",
+    "predicted_segmentation_folder = #path to predicted segmentation folder\n",
+    "output_folder = #path to output folder\n",
     "\n",
     "# Define the colors for the output image\n",
     "color_green = [0, 255, 0]     # Green for true positive (both true and predicted positive)\n",
